--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -13,6 +13,7 @@
 \newcommand{\colors}{\variable{c}}
 \newcommand{\features}{\variable{f}}
 \newcommand{\termStats}{\Phi_\term}
+\newcommand{\weightStats}{\Phi_w}
 \newcommand{\termInstStats}{\phi_\term}
 \newcommand{\expectation}{\mathds{E}}
 
