New teaser figure/wording, results changes.

--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -127,7 +127,7 @@
         Input pattern                   & Sampled colorings               & Random colorings                \\
     \end{tabular}
 %\end{table}
-\caption{Given the uncolored pattern templates shown on the left, we use our probabilistic factor graph model to generate the pattern colorings shown in the middle. Our factor graph is trained on example patterns created by artists. For comparison, on the right we show randomized colorings of each template.~\remark{Note that we don't use any of the intensity information in the template (or will we, in a new result?)}}
+\caption{Given the uncolored pattern templates shown on the left, we use our probabilistic factor graph model to generate the pattern colorings shown in the middle. Our factor graph is trained on example patterns created by artists, and the top ten results after MMR diversification are shown. For comparison, on the right we show randomized colorings of each template. The lightness information used to visualize the input pattern is not used.}
 \label{fig:teaser}
 \vspace{-1.0em}
 
