--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -72,18 +72,18 @@ Here, $\textrm{targetColor}(\group)$ is the desired color of group $\group$ and 
 %\end{equation*}
 %%%
 
-\begin{figure}[ht]
-\begin{tabular}{cc}
-{\includegraphics[width=.1785\columnwidth]{figs/brightness0Original}}&\includegraphics[width=.735\columnwidth]{figs/brightness0MMR}\vspace{0.5em}\\
-{\includegraphics[width=.1785\columnwidth]{figs/brightness1Original}}&\includegraphics[width=.735\columnwidth]{figs/brightness1MMR}\vspace{0.5em}\\
+%\begin{figure}[ht]
+%\begin{tabular}{cc}
+%{\includegraphics[width=.1785\columnwidth]{figs/brightness0Original}}&\includegraphics[width=.735\columnwidth]{figs/brightness0MMR}\vspace{0.5em}\\
+%{\includegraphics[width=.1785\columnwidth]{figs/brightness1Original}}&\includegraphics[width=.735\columnwidth]{figs/brightness1MMR}\vspace{0.5em}\\
 %\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}}%&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
-Original&Suggestions\\
-\end{tabular}
+%Original&Suggestions\\
+%\end{tabular}
 
-\caption{TODO.}
-\label{fig:lightnessSearch}
-\vspace{-1.0em}
-\end{figure}
+%\caption{TODO.}
+%\label{fig:lightnessSearch}
+%\vspace{-1.0em}
+%\end{figure}
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
@@ -98,7 +98,7 @@ Original&Suggestions\\
 \vspace{-1.0em}
 \end{figure}
 
-Figure~\ref{fig:nearbySuggestions} shows example scenarios where a proposed coloring is given, and the model returns similar colorings. Our model is able to make significant variations to the input colors while still preserving desirable properties of the results.~\remark{Maybe preserving the `character' or the `identity' of the original?}
+Figure~\ref{fig:nearbySuggestions} shows example scenarios where a proposed coloring is given, and the model returns similar colorings. Here we choose $\sigma_\textrm{user}$ to be 10\% of the diagonal length of the \lab color space, and $w_\textrm{user}=3.0$, indicating a desire to remain fairly close to the original coloring. Our model is able to make numerous variations to the input colors while still preserving the overall quality of the results.
 
 \begin{figure}[ht]
 \begin{tabular}{ccc} 
