--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -512,3 +512,20 @@ pages={599-619}
  address = {New York, NY, USA},
  keywords = {constrained synthesis, factor graphs, open worlds},
 }
+
+@article{CIEDE2000,
+    author = {Sharma, G. and Wu, W. and Dalal, E. N.},
+    citeulike-article-id = {6930392},
+    citeulike-linkout-0 = {http://www.ece.rochester.edu/\~{}gsharma/ciede2000/},
+    journal = {Color research and application},
+    keywords = {image-quality},
+    number = {1},
+    pages = {21--30},
+    posted-at = {2010-03-30 18:14:14},
+    priority = {2},
+    publisher = {New York: Wiley, 1976-},
+    title = {{The CIEDE2000 color-difference formula: implementation notes, supplementary test data, and mathematical observations}},
+    url = {http://www.ece.rochester.edu/\~{}gsharma/ciede2000/},
+    volume = {30},
+    year = {2005}
+}
