--- a/latex/siggraph2013/introduction.tex
+++ b/latex/siggraph2013/introduction.tex
@@ -1,6 +1,8 @@
 \section{Introduction}
 \label{sec:introduction}
 
+PLACEHOLDER
+
 %% Hook
 From graphic and web design, to fashion and fabrics, to interior design, colored patterns are everywhere. Web designers use them as main images, backgrounds, or repeating page elements, fashion designers print them on clothing and accesories, and interior designers employ them on upholstery, wallpaper, drapes, and more.
 
