Commit so I can pull.

--- a/latex/siggraph2013/model.tex
+++ b/latex/siggraph2013/model.tex
@@ -7,8 +7,10 @@ To do this, we turn to the language of \emph{probabilistic factor graphs}. A fac
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
-\raisebox{4em}{\includegraphics[width=.2\columnwidth]{figs/factorGraphPattern}} &
-\includegraphics[width=.7\columnwidth]{figs/factorGraph} \\
+%\raisebox{4em}{\includegraphics[width=.2\columnwidth]{figs/factorGraphPattern}} &
+%\includegraphics[width=.7\columnwidth]{figs/factorGraph} 
+\includegraphics{figs/factorGraphNew}
+\\
 \end{tabular} 
 \caption{A factor graph for an example pattern template. Factors correspond with the color compatibility and spatial terms from our model. In the figure, nodes are colored according to their corresponding color group in the pattern\remark{Rough figure.}}
 \label{fig:FactorGraph}
