Additional limitations discussion.

--- a/latex/siggraph2013/discussion.tex
+++ b/latex/siggraph2013/discussion.tex
@@ -10,9 +10,9 @@ There is still much work to be done to understand what makes a pattern coloring 
 % Discuss limitations, etc.
 One immediate limitation of the current model is that it does not encode any semantic constraints on pattern regions, such as skies being blue or plants being green. This is not always a problem, as even human artists do not always respect these semantics (see the red clouds in Figure~\ref{fig:permutation}b), and patterns often admit many attractive, non-semantic colorings (Figure~\ref{fig:constrainedInference}). However, some patterns appear ugly or confusing when their colorings do not respect semantics, as shown in Figure~\ref{fig:badFlowers}. Labeling regions with semantic tags could address this problem, as the system could search for images on the web using these tags and build up a distribution of expected colors. It might even be possible to predict such labels automatically using sketch classification techniques~\cite{SketchClassification}.
 
-~\remark{Other limitations/insights we may want to mention (at some point in the paper; it doesn't have to be here): (1) The fuzzy nature of probabilistic models means they may overshoot `hard' constraints that the viewer expects to be satisfied (e.g. some minimum contrast between adjacent regions). (2) For images that use blending extensively, the raster image is a poor approximation to the source vector artwork, and our model may not capture the features very well (or may capture the wrong ones). (3) Training simultaneously on many artists with different styles can yield `muted' results, as the model isn't confident about anything.}
+In addition, some of COLOURlovers pattern templates use extensive color blending in their original vector artwork. For these patterns, the rasterized image is a poor approximation to the original artwork, and our model may not capture very predictive spatial features (or it may capture the wrong ones). In the future, we would like to apply our model to a dataset of vector patterns.
 
-%In addition, the model has little higher-level understanding of objects in the pattern and the roles different pattern elements can play. For example, in the original pattern for Figure~\ref{fig:badFlowers}, color groups are strongly linked to objects. The background is composed of two color groups. In addition, the foreground flowers are composed of petals, petal lineart, and stems. Colorings from our model that do not clearly separate the foreground elements from the background elements, or do not color related groups -- like petal lineart and petals -- similarly tend to be confusing. Higher-level features and factors that consider groups as part of objects, may be needed to capture these effects.~\remark{S:I guess this point is kind of similar to the semantics point, so maybe it could be combined with the semantics discussion.}~\remark{D: It might be better to make a point about `emphasis' here, i.e. we don't know what pattern elements should be emphasized or separated to draw the viewer's eye. Could make some points about saliency here.}
+%~\remark{Other limitations/insights we may want to mention (at some point in the paper; it doesn't have to be here): (1) The fuzzy nature of probabilistic models means they may overshoot `hard' constraints that the viewer expects to be satisfied (e.g. some minimum contrast between adjacent regions). (2) For images that use blending extensively, the raster image is a poor approximation to the source vector artwork, and our model may not capture the features very well (or may capture the wrong ones). (3) Training simultaneously on many artists with different styles can yield `muted' results, as the model isn't confident about anything.}
 
 
 \begin{figure}
