--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -22,7 +22,7 @@ To form a set of predictive features for an adjacent segment pair, we use the fe
 \begin{figure}[ht]
 \centering
 \includegraphics[width=.7\columnwidth]{figs/surround}
-\caption{Color appearance depends on relationships with surrounding regions\remark{Rough figure.}}
+\caption{Color appearance depends on relationships with surrounding regions.}
 \label{fig:surround}
 \end{figure}
 
