Caption tweak etc.

--- a/latex/siggraph2013/model.tex
+++ b/latex/siggraph2013/model.tex
@@ -9,7 +9,7 @@ To do this, we turn to the language of \emph{probabilistic factor graphs}. A fac
 %\raisebox{4em}{\includegraphics[width=.2\columnwidth]{figs/factorGraphPattern}} &
 %\includegraphics[width=.7\columnwidth]{figs/factorGraph} 
 \includegraphics[width=\columnwidth]{figs/factorGraphNew}
-\caption{A factor graph for an example pattern template. Factors correspond with the color compatibility and spatial terms from our model. In the figure, nodes are colored according to their corresponding color group in the pattern.}
+\caption{A factor graph for an example pattern template. Variable nodes are colored according to their corresponding color group in the pattern.}
 \label{fig:FactorGraph}
 \end{figure}
 
