Rewording evaluation results figure caption.

--- a/latex/siggraph2013/evaluation.tex
+++ b/latex/siggraph2013/evaluation.tex
@@ -16,32 +16,11 @@ The study interface presents participants with a randomized grid of all 16 color
 
 Figure ~\ref{fig:study} shows the number of times suggestions from each source were chosen as a `Top 4' or `Bottom 4' pattern. When counting, we do not include suggestions from the replicated template. We use binomial regression to model the odds of each source being chosen as either a `Top 4' or `Bottom 4' suggestion. Tukey all-pair comparison tests show that all differences are significant ($p < 0.01$), except for the odds that an \artistSource~suggestion will be chosen as a `Bottom 4' suggestion versus a \modelSource~suggestion. \artistSource~patterns are selected most often as a `Top 4' pattern, with our \modelSource~patterns selected second most often. In addition, \modelSource~patterns are selected least as a `Bottom 4' pattern, along with \artistSource~patterns.
 
-\remark{S: to be updated as more results come in}
-
-% \begin{table}[h!]
-%   \begin{center}
-% \begin{tabular}{l| l l}
-%   \hline
-% \textbf{Source} & \textbf{Top 4} & \textbf{Bottom 4} \\
-%   \hline \\[-1.0em]
-% Artist & 155 & 39\\
-% Model & 95 & 44 \\
-% Color Compatibility & 50 & 98  \\
-% Random & 20 & 139 \\
-% \hline
-% \end{tabular}
-% \end{center}
-% \caption{Total number of times each suggestion type was selected as a top 4 and worst 4 pattern (out of 320 total observations)~\remark{D: I'd prefer a chart that allows visual comparisons (bar chart?)}}
-
-%  \label{table:study}
-% \end{table}
-
-
 \begin{figure}[h!]
   \begin{center}
   \includegraphics[width=\columnwidth]{figs/evaluation.png}
 	\end{center}
-\caption{Total number of times each suggestion type was selected as a top 4 and worst 4 pattern (out of 320 total observations)~\remark{D: I'd prefer a chart that allows visual comparisons (bar chart?)}}
+\caption{The percentage of times that \artistSource-created, \modelSource-generated, \compatSource-only, and \randomSource~patterns were chosen by participants as one of their `Top 4' favorite or `Bottom 4' least favorite patterns in our online experiment.}
 
  \label{fig:study}
 \end{figure}
